<resources>
    <string name="app_name">Awesomecity</string>
    <string name="text_login">Login</string>
    <string name="text_username_hint">Enter an username</string>
    <string name="text_password_hint">Password</string>
    <string name="text_refresh">Refresh</string>
    <string name="error_fetch_data">No data available.</string>
    <string name="item_book_table">Book Table</string>
    <string name="item_menu">Menu</string>
    <string name="item_your_order">Your Order</string>
    <string name="text_capacity">Capacity</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="text_to_table">Go to Table Select</string>
</resources>
