<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.awesomecity.screen.login.LoginViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.framgia.awesomecity.screen.login.LoginActivity"
        >

        <TextView
            android:id="@+id/text_logo"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_100"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_40"
            />

        <EditText
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_100"
            android:hint="@string/text_username_hint"
            android:text="@={viewModel.email}"/>

        <EditText
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_100"
            android:hint="@string/text_password_hint"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"/>

        <Button
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_50"
            android:onClick="@{viewModel::onLoginButtonClicked}"
            android:text="@string/text_login"/>

        <TextView
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_100"
            android:gravity="center_horizontal"
            android:text="@{viewModel.errorMessage}"/>
    </LinearLayout>
</layout>
