<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.awesomecity.screen.customer.booking.BookingViewModel"
            />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_50"
        android:paddingRight="@dimen/dp_50"
        tools:context="com.framgia.awesomecity.customer.screen.booking.BookingActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_capacity"
                android:inputType="numberDecimal"
                android:lines="1"
                android:text="@={viewModel.capacity}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/text_date"
                android:lines="1"
                android:onClick="@{viewModel::showDatePicker}"
                android:text="@={viewModel.date}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:hint="@string/text_time"
                android:inputType="time"
                android:lines="1"
                android:onClick="@{viewModel::showTimePicker}"
                android:text="@={viewModel.time}"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="@{viewModel::onButtonClicked}"
            android:text="@string/text_to_table"/>
    </LinearLayout>
</layout>
